--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -29,15 +29,29 @@
         android:layout_margin="10dp"
         />
 
-    <EditText
-        android:id="@+id/editPhone"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone number"
-        android:inputType="phone"
-        android:layout_margin="10dp"
-        />
-
+        android:gravity="center_vertical"
+        >
+        <EditText
+            android:id="@+id/editPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Phone number"
+            android:inputType="phone"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            />
+        <Button
+            android:id="@+id/buttonSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="send"
+            android:textColor="#fff"
+            android:backgroundTint="@color/colorPrimary"
+            />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,10 +67,10 @@
             android:layout_weight="1"
             />
         <Button
-            android:id="@+id/buttonSend"
+            android:id="@+id/buttonVerify"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="send"
+            android:text="Verify"
             android:textColor="#fff"
             android:backgroundTint="@color/colorPrimary"
             />
